--- a/styles/global.css
+++ b/styles/global.css
@@ -17,8 +17,8 @@
   --background-color: #09090b;
   --surface-color: #18181B;
   --stroke-color: #27272A;
-  --text-color-primary: #A1A1AA;
-  --text-color-secondary: #F4F4F5;
+  --text-color-primary: #F4F4F5;
+  --text-color-secondary: #A1A1AA;
 
   --brand-gradient: #FC4A1A #F7B733;
   --brand-color-primary: #F7B733;
