--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -29,6 +29,18 @@
   gap: 1rem;
 }
 
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+.gap {
+  gap: 1rem;
+}
+
 @media (width >= 80em) {
   .container {
     --max-width: 80rem;
